add EMO Dot Board config

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -111,6 +111,10 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
+elseif(CONFIG_BOARD_TYPE_EMO_DOT_S3_1_28)
+    set(BOARD_TYPE "emo-dot-s3-1.28")
+elseif(CONFIG_BOARD_TYPE_EMO_DOT_C3_1_28)
+    set(BOARD_TYPE "emo-dot-c3-1.28")
 endif()
 file(GLOB BOARD_SOURCES 
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
